<?xml version="1.0"?>
<package format="3">
  <name>cloud_msgs</name>
  <version>1.0.0</version>
  <description>The cloud_msgs package contains messages.</description>

  <!-- 声明构建和运行时依赖项 -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- 其他软件包信息 -->
  <license>BSD</license>
  <maintainer email="xxx@xxx.xxx">Tixiao Shan</maintainer>
</package>
